[project]
name = "troninfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "base58>=2.1.1",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "sqlalchemy>=2.0.41",
    "tronpy[async]>=0.6.1",
    "uvicorn>=0.35.0",
]
